Fact 2683 pdf merge issue investigation. (DO NOT MERGE) (#2777)
* Add OPTIMIZE_RESOURCES_MODE fallback for pdf merge

* Remove unnecessary method param

* Additional logging for merge code

* Add test for provided file

---------

Co-authored-by: Adam Stevenson <addstevenson@hotmail.com>